# feb-stats

./: .flake8  .gitattributes  .gitignore  BUILD  Dockerfile  Dockerfile_python_server  Dockerfile_web_server  LICENSE  Pipfile  README.md  WORKSPACE  analyze_boxscore.py  analyze_boxscores.py  analyze_cum_stats.py  analyze_season_stats.py  docker-compose.yml  launch-gui.py  launch.py  manage.py  mypy.ini  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py
.github/workflows/: black.yml  deployment.yml  docker-build.yml  lint.yml  pep8.yml  workflow.yml
core/: models.py
core/analysis/: data_models.py  data_models_ops.py  entities.py  entities_ops.py  lang.py  saving.py  transforms.py  utils.py  validation_functions.py
core/management/commands/: export_boxscores.py  save_server_response.py
core/migrations/: 0001_initial.py
core/parsers/: helpers.py  parsers.py  transforms.py
core/scrapers/: actions.py
data/: 10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  20.html  21.html  22.html  23.html  24.html  25.html  26.html  27.html  28.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
feb_stats/: README.md  constants.py  cum_stats_transforms.py  entities.py  game_stats_transforms.py  models_generic.py  parser.py  transforms.py  urls.py  utils.py
feb_stats/core/: entities.py  entities_ops.py  lang.py  saving.py  transforms.py  utils.py  validation_functions.py
feb_stats/parsers/: exceptions.py  feb_livescore_parser.py  feb_livescore_stats_transforms.py  feb_parser.py  feb_stats_transforms.py  generic_parser.py  parsers.py
feb_stats/scraper/: scraper.py
feb_stats/scrapers/: boxscore_scraper.py
feb_stats/scripts/: export_boxscores.py
feb_stats/service/: api.py  handler.py  server.py
feb_stats/service/codegen/: feb_stats_pb2.py  feb_stats_pb2.pyi  feb_stats_pb2_grpc.py
feb_stats/settings/: base.py  local.py  production.py
feb_stats/tools/: export_boxscores.py  save_server_response.py
feb_stats/web/: README.md  read_write.py  webapp.py
feb_stats/web/config/: defaults.yaml  local.yaml
feb_stats/web/static/: main.css
feb_stats/web/static/assets/: BUILD
feb_stats/web/templates/: index.html
images/: BUILD  deps.bzl
js/node/: BUILD  package-lock.json  package.json  server.js
js/node/config/: BUILD
js/node/public/css/: main.css
js/node/public/js/: client.js  dz_config.js
js/node/views/: index.hbs
protos/: BUILD  feb_stats.proto
protos/test/: generate_json.py
python/: README.md  pyproject.toml
python/feb_stats/: BUILD  cum_stats_transforms.py  entities.py  entities_ops.py  lang.py  loc.py  parser.py  parser_test.py  saving.py  transforms.py  transforms_test.py  utils.py  utils_test.py
python/feb_stats/parsers/: BUILD  feb_livescore_parser.py  feb_livescore_parser_test.py  feb_livescore_stats_transforms.py  feb_livescore_stats_transforms_test.py  feb_parser.py  feb_parser_test.py  feb_stats_transforms.py  feb_stats_transforms_test.py  generic_parser.py
python/service/: BUILD  api.py  api_test.py  handler.py  handler_test.py  server.py  server_test.py
python/service/codegen/: feb_stats_pb2.py  feb_stats_pb2.pyi  feb_stats_pb2_grpc.py
python/tests/feb_stats/: transforms_test.py
python/tests/feb_stats/parsers/: feb_livescore_parser_test.py  feb_livescore_stats_transforms_test.py  feb_parser_test.py
python/tests/service/: api_test.py
python/tests/test_data/: 1.html
python/tools/: BUILD  analyze_boxscores.py  export_boxscores.py  export_boxscores_binary.py  launch_gui.py  save_server_response.py
python/web/: BUILD  README.md  db.py  webapp.py
python/web/config/: BUILD  local.yaml
python/web/static/: BUILD  main.css
python/web/templates/: BUILD  index.hbs
python/web/templates/views/: BUILD
scripts/: lint.py  lint.sh  test.sh
service/: README.md  api.py  handler.py  server.py
service/codegen/: feb_stats_pb2.pyi  feb_stats_pb2_grpc.py
src/core/analysis/: entities.py  entities_ops.py  saving.py  transforms.py
src/core/management/commands/: export_boxscores.py
src/core/parsers/: parsers.py  transforms.py
src/core/scrapers/: actions.py  boxscore_scraper.py
src/feb_stats/: asgi.py  urls.py  wsgi.py
src/feb_stats/settings/: base.py  production.py  testing.py
src/protos/test/: generate_json.py
src/service/: api.py  handler.py  server.py
src/service/codegen/: feb_stats_pb2.py  feb_stats_pb2.pyi
src/static/web/css/: main.css
src/web/: apps.py  urls.py  views.py
src/web/config/: defaults_25_26.yaml
src/web/helpers/: read_write.py
test_artifacts/: 1.html  game_sheet.html
test_data/: 1.html  1_livescore.html  2.html  2_livescore.html  BUILD  input.json
tests/: parser_test.py
tests/data/: 1_livescore.html  1_livescore.json  2.html  2_livescore.html  2_livescore.json  3_livescore.htm  3_livescore.html  3_livescore.json  4_livescore.html  4_livescore.json  5_livescore.html  5_livescore.json  6_livescore.json  7_livescore.json
tests/feb_stats/core/: transforms_test.py  utils_test.py
tests/feb_stats/parsers/: feb_livescore_parser_test.py  feb_livescore_stats_transforms_test.py  feb_parser_test.py
tests/feb_stats/service/: api_test.py  handler_test.py  server_test.py
tests/feb_stats/test_parsers/: test_feb_livescore_parser.py  test_feb_parser.py  test_feb_stats_transforms.py
tests/feb_stats/test_service/: test_api.py  test_handler.py
tests/test_data/: input.json
tests/test_feb_stats/test_core/: test_transforms.py  test_utils.py
tests/test_feb_stats/test_core/test_analysis/: test_transforms.py  (+1 more)
tests/test_feb_stats/test_parsers/: test_feb_livescore_parser.py  test_feb_livescore_stats_transforms.py  test_feb_parser.py  test_feb_stats_transforms.py
tests/test_feb_stats/test_scrapers/: test_scraper.py
tests/test_feb_stats/test_service/: test_api.py  test_server.py
tests/test_feb_stats/test_web/: test_helpers.py  test_web.py
tests/test_feb_stats/test_webapp/: test_webapp.py
toolchains/: BUILD  create_venv.sh  py3wrapper.sh  venv.bzl  wrapper.bzl
web/: urls.py  views.py
web/templates/web/: index.html
(+4 files in other folders)
