[tool.poetry]
name = "feb-stats"
version = "0.1.0"
description = "FEB stats parser."
authors = ["Álvaro Peris <lvapeab@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
setuptools= "^58.2.0"
grpcio = "^1.29.0"
grpcio-reflection = "^1.29.0"
grpcio-status = "^1.29.0"
grpcio-tools = "^1.29.0"
lxml = "^4.5.1"
numpy = "^1.18.5"
openpyxl = "^3.0.3"
pandas = "^1.0.3"
requests = "^2.23.0"
flask = "^1.1.2"
pyyaml = "^5.3.1"
werkzeug = "^1.0.1"
pytest = "^6.2.2"
gunicorn = "^20.1.0"


[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^3.9.0"
mypy = "^0.990"
mypy-protobuf = "^1.23"
types-PyYAML = "^6.0.12"
types-requests = "^2.28.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
skip_glob = "**/site-packages/**, **/bin/**"