[build-system]
requires = ["poetry-core", ]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "feb-stats"
version = "1.0.0"
authors = ["Ãlvaro Peris"]
description = "FEB Stats: Insights from FEB data."
packages = [
    { include = "scripts" }
]

[tool.poetry.scripts]
lint = "scripts.lint:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
lxml = "~=5.3.0"
numpy = "~=2.1.2"
openpyxl = "~=3.1.5"
pandas = "~=2.2.3"
pydantic = "~=2.10.3"
requests = "~=2.32.3"
flask = "~=3.0.3"
pyyaml = "~=6.0.2"
werkzeug = "~=3.0.4"
gunicorn = "~=23.0.0"
grpcio = "~=1.68.1"
grpcio-reflection = "~=1.68.1"
grpcio-status = "~=1.68.1"
grpcio-tools = "~=1.68.1"
beautifulsoup4 = "~=4.12.3"

[tool.poetry.group.dev.dependencies]
mypy ="~=1.12.1"
types-beautifulsoup4 ="~=4.12.0"
ruff ="~=0.8.2"
pytest = "~=8.3.3"
pytest-cov = "~=6.0.0"
mypy-protobuf ="~=3.6.0"
types-PyYAML = "~=6.0.12"
types-requests = "~=2.32.0"


[tool.ruff]
line-length = 120
target-version = "py311"
indent-width = 4

[tool.ruff.lint]
select  = ["F", "E", "TCH", "UP"]
ignore = []
exclude = [
  "*/migrations/*",
  "tests/*",
  "*/build/*",
  "doc/",
  "./venv",
  ".pyenv*",
  "feb_stats/service/codegen/*"
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
omit = [
    "*/settings/*",
    "*/migrations/*",
    ".venv/*",
    "*/tests/*",
    "*/scripts/*",
    "*/*/codegen/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  ".__instance is None:",
  "@abstract",
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

]
