[tool.poetry]
name = "feb-stats"
version = "0.1.0"
description = "FEB stats parser."
authors = ["Álvaro Peris <lvapeab@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
grpcio = "^1.29.0"
grpcio-reflection = "^1.29.0"
grpcio-status = "^1.29.0"
grpcio-tools = "^1.29.0"
lxml = "^4.5.1"
numpy = "^1.18.5"
opencensus = "^0.7.7"
opencensus-ext-grpc = "^0.7.1"
opencensus-ext-jaeger = "^0.7.1"
openpyxl = "^3.0.3"
pandas = "^1.0.3"
requests = "^2.23.0"
opencensus-ext-prometheus = "^0.2.1"
prometheus-client = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
