[tool.poetry]
name = "feb-stats"
version = "0.1.0"
description = "FEB stats parser."
authors = ["Álvaro Peris <lvapeab@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
grpcio = "^1.29.0"
grpcio-reflection = "^1.29.0"
grpcio-status = "^1.29.0"
grpcio-tools = "^1.29.0"
lxml = "^4.5.1"
numpy = "^1.18.5"
openpyxl = "^3.0.3"
pandas = "^1.0.3"
requests = "^2.23.0"
opencensus-ext-prometheus = "^0.2.1"
prometheus-client = "^0.8.0"
flask = "^1.1.2"
mypy-protobuf = "^1.23"
pyyaml = "^5.3.1"
flask_sqlalchemy = "^2.4.4"
werkzeug = "^1.0.1"
flake8 = "^3.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
